fixed navbar css on mobile

--- a/src/css/root.less
+++ b/src/css/root.less
@@ -310,7 +310,7 @@
             overflow: hidden;
             box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
             background-color: #fff;
-            top: 64/16rem; // same as #navigation height
+            top: 59/16rem; // same as #navigation height
 
             //Transition Properties
             padding-top: 0;
@@ -333,19 +333,25 @@
 
                     //Staggar their transitions
                     &:nth-of-type(1) {
-                        transition-delay: .1s;
+                        transition-delay: .01s;
                     }
                     &:nth-of-type(2) {
-                        transition-delay: .2s;
+                        transition-delay: .02s;
                     }
                     &:nth-of-type(3) {
-                        transition-delay: .3s;
+                        transition-delay: .03s;
                     }
                     &:nth-of-type(4) {
-                        transition-delay: .4s;
+                        transition-delay: .04s;
                     }
                     &:nth-of-type(5) {
-                        transition-delay: .5s;
+                        transition-delay: .05s;
+                    }
+                    &:nth-of-type(6) {
+                        transition-delay: .06s;
+                    }
+                    &:nth-of-type(7) {
+                        transition-delay: .07s;
                     }
                     a {
                         text-decoration: none;
@@ -380,7 +386,7 @@
 
         // Navbar Menu Open State
         #navbar-menu.open {
-            height: 306/16rem;
+            height: 356/16rem;
             padding-top: 20/16rem;
             z-index: -100;
 
